firebase added to items client to add

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "firebase": "^11.9.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.59.0",
     "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
