--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@react-spring/web": "^10.0.1",
     "dayjs": "^1.11.13",
     "firebase": "^11.9.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.59.0",
